--- a/package.json
+++ b/package.json
@@ -1,24 +1,20 @@
 {
-  "name": "medusa-starter-default",
+  "name": "medusa-payment-razorpayment",
   "version": "0.0.1",
   "description": "A starter for Medusa projects.",
-  "author": "Sebastian Rindom <skrindom@gmail.com>",
+  "author": "PradeepShivaram <pradeepshivaram@outlook.com>",
   "license": "MIT",
   "scripts": {
-    "seed": "medusa seed -f ./data/seed.json",
     "build": "babel src -d dist --extensions \".ts,.js\"",
-    "start": "medusa develop"
+    "watch": "babel -w src --out-dir . --ignore **/__tests__ --extensions \".ts,.js\"",
+    "prepare": "cross-env NODE_ENV=production npm run build"
   },
   "dependencies": {
     "@medusajs/medusa": "^1.6.0",
-    "@medusajs/medusa-cli": "^1.3.3",
-    "medusa-fulfillment-manual": "^1.1.31",
     "medusa-interfaces": "^1.3.3",
-    "medusa-payment-manual": "^1.0.16",
-    "medusa-payment-stripe": "^1.1.45",
+    "razorpay": "^2.8.4",
     "typeorm": "^0.2.36"
   },
-  "repository": "https://github.com/medusajs/medusa-starter-default.git",
   "keywords": [
     "sqlite",
     "ecommerce",
@@ -29,6 +25,7 @@
     "@babel/cli": "^7.18.10",
     "@babel/core": "^7.18.10",
     "@babel/preset-typescript": "^7.14.5",
-    "babel-preset-medusa-package": "^1.1.19"
+    "babel-preset-medusa-package": "^1.1.19",
+    "cross-env": "^7.0.3"
   }
 }
